tests/snapshots/system_list_tests__list_empty_config.snap
---
source: tests/system_list_tests.rs
expression: text
---
  Environment: development (--env flag)

  Steps:

  Workflows:
