tests/snapshots/system_list_tests__list_json_env_staging.snap
---
source: tests/system_list_tests.rs
expression: parsed
---
{
  "environment": "staging",
  "steps": [
    {
      "command": "cargo --version",
      "name": "prod_only",
      "skipped": true,
      "title": "Prod deploy"
    },
    {
      "command": "cargo --version",
      "name": "setup",
      "title": "Setup"
    },
    {
      "command": "git log --oneline -1",
      "name": "staging_only",
      "title": "Staging deploy"
    }
  ],
  "workflows": [
    {
      "name": "default",
      "steps": [
        "setup",
        "staging_only",
        "prod_only"
      ]
    }
  ]
}
