tests/snapshots/system_list_tests__list_json_single_step.snap
---
source: tests/system_list_tests.rs
expression: parsed
---
{
  "environment": "development",
  "steps": [
    {
      "command": "rustc --version",
      "name": "only",
      "title": "Only step"
    }
  ],
  "workflows": [
    {
      "name": "default",
      "steps": [
        "only"
      ]
    }
  ]
}
