tests/snapshots/system_list_tests__list_json_workflow_description_parsed.snap
---
source: tests/system_list_tests.rs
expression: "parsed[\"workflows\"]"
---
[
  {
    "name": "default",
    "steps": [
      "deps",
      "build",
      "test"
    ]
  },
  {
    "description": "Quick check",
    "name": "quick",
    "steps": [
      "test"
    ]
  }
]
