tests/snapshots/system_list_tests__list_json_workflows_only.snap
---
source: tests/system_list_tests.rs
expression: parsed
---
{
  "environment": "development",
  "workflows": [
    {
      "name": "default",
      "steps": [
        "deps",
        "build",
        "test"
      ]
    },
    {
      "description": "Quick check",
      "name": "quick",
      "steps": [
        "test"
      ]
    }
  ]
}
